# karkinOS

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  disk.layout  test.sh
.cargo/: config.toml
boot/boot_init/: linker.ld
boot/boot_init/src/: boot.asm  main.rs
boot/boot_utils/: Cargo.toml
boot/boot_utils/src/: disk.rs  print.rs
boot/bootloader/: Cargo.toml  linker.ld
boot/bootloader/.cargo/: config.toml
boot/bootloader/src/: main.rs  modes.rs
boot_init/: Cargo.toml  build.sh
boot_init/src/: main.rs
boot_utils/src/: disk.rs  lib.rs  print.rs
bootloader/src/: gdt.rs  main.rs  modes.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: framebuffer.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  tests.rs
kernel/src/tests/: math.rs  mod.rs
src/: main.rs
src/boot_init/: Cargo.toml  build.rs  build.sh
src/boot_init/src/: disk.rs  main.rs
