[workspace]
members = ["boot_init", "boot_utils", "bootloader", "kernel"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Farhan Sanukri"]
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 1
lto = true

[profile.release]
panic = "abort"
opt-level = 1

[profile.release.package.boot_init]
codegen-units = 1
debug = false
overflow-checks = false
opt-level = "z"  
strip = true



[profile.dev.package.boot_init]
codegen-units = 1
debug = false
overflow-checks = false
opt-level = "z"  
strip = true
