[package]
name = "karkinos"
version = "0.1.0"
edition = "2024"
default-run = "karkinos"

[workspace]
members = ["kernel", "spleen-font"]

[dependencies]
bootloader = "0.11.3"
log = "0.4.27"
ovmf-prebuilt = "0.1.0-alpha"


[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
