[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[features]
kerntest = []

[dependencies]
bootloader_api = "0.11.3"
bootloader-x86_64-common = "0.11.3"
conquer-once = { version = "0.4.0", default-features = false }
log = { version = "0.4.17", default-features = false }
embedded-graphics = "0.8.1"
paste = "1"
